NetBSD Problem Report #57598

From www@netbsd.org  Sat Sep  2 22:11:30 2023
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 9D1041A9239
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  2 Sep 2023 22:11:30 +0000 (UTC)
Message-Id: <20230902221129.4CF151A923A@mollari.NetBSD.org>
Date: Sat,  2 Sep 2023 22:11:29 +0000 (UTC)
From: brook@nmsu.edu
Reply-To: brook@nmsu.edu
To: gnats-bugs@NetBSD.org
Subject: Writing to uart4 on Beaglebone Black hangs the kernel
X-Send-Pr-Version: www-1.0

>Number:         57598
>Category:       port-arm
>Synopsis:       Writing to uart4 on Beaglebone Black hangs the kernel
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    gutteridge
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Sep 02 22:15:01 +0000 2023
>Closed-Date:    Wed Oct 18 16:06:39 +0000 2023
>Last-Modified:  Wed Oct 18 16:06:39 +0000 2023
>Originator:     Brook Milligan
>Release:        NetBSD 10.99.7
>Organization:
>Environment:
NetBSD armv7 10.99.7 NetBSD 10.99.7 (GENERIC) #0: Wed Aug 30 15:02:40 MDT 2023  brook@...:/.../NetBSD/evbarm-earmv7hf-beaglebone/obj/sys/arch/evbarm/compile/GENERIC evbarm
>Description:
The Beaglebone Black has 6 uarts, one of which (uart0) is used for the serial console.  Another, uart4, is used by the comms cape, but is not enabled by the default device tree.  Enabling it with a device tree overlay causes the kernel to configure it as com1.  However, any write to the device will immediately hang the kernel; it does not respond to keystrokes on the console, will not enter ddb, and will not respond to pings.
>How-To-Repeat:
(i) Boot a Beaglebone Black with a device tree that enables uart4.  One is available at https://github.com/beagleboard/bb.org-overlays/blob/master/src/arm/BB-UART4-00A0.dts.

(ii) Write a character to com1, e.g., with "cu -l /dev/dty01".



>Fix:
No fix is known.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->analyzed
State-Changed-By: gutteridge@NetBSD.org
State-Changed-When: Sun, 03 Sep 2023 15:54:57 +0000
State-Changed-Why:
Canadiate fix: https://mail-index.netbsd.org/netbsd-users/2023/09/03/msg030107.html

From: "David H. Gutteridge" <david@gutteridge.ca>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: port-arm/57598 (Writing to uart4 on Beaglebone Black hangs the
 kernel)
Date: Sun, 03 Sep 2023 12:03:48 -0400

 On 2023-09-03 11:54, gutteridge@NetBSD.org wrote:

 > Synopsis: Writing to uart4 on Beaglebone Black hangs the kernel
 > 
 > State-Changed-From-To: open->analyzed
 > State-Changed-By: gutteridge@NetBSD.org
 > State-Changed-When: Sun, 03 Sep 2023 15:54:57 +0000
 > State-Changed-Why:
 > Canadiate fix: 
 > https://mail-index.netbsd.org/netbsd-users/2023/09/03/msg030107.html

 (Whoops, "candidate", that is. Nothing Canadian about it. Not a
 portmanteau of a "Canadian cross-compile candidate". :)

From: Jason Thorpe <thorpej@me.com>
To: gnats-bugs@netbsd.org
Cc: kern-bug-people@netbsd.org,
 netbsd-bugs@netbsd.org,
 gnats-admin@netbsd.org,
 "gutteridge@netbsd.org" <gutteridge@NetBSD.org>,
 Brook Milligan <brook@nmsu.edu>
Subject: Re: port-arm/57598 (Writing to uart4 on Beaglebone Black hangs the
 kernel)
Date: Sun, 3 Sep 2023 10:54:18 -0700

 > On Sep 3, 2023, at 8:54 AM, gutteridge@netbsd.org =
 <gutteridge@NetBSD.org> wrote:
 >=20
 > Synopsis: Writing to uart4 on Beaglebone Black hangs the kernel
 >=20
 > State-Changed-From-To: open->analyzed
 > State-Changed-By: gutteridge@NetBSD.org
 > State-Changed-When: Sun, 03 Sep 2023 15:54:57 +0000
 > State-Changed-Why:
 > Canadiate fix: =
 https://mail-index.netbsd.org/netbsd-users/2023/09/03/msg030107.html

 Looks correct to me.

 -- thorpej

From: "David H. Gutteridge" <david@gutteridge.ca>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: port-arm/57598 (Writing to uart4 on Beaglebone Black hangs the
 kernel)
Date: Mon, 04 Sep 2023 19:38:34 -0400

 OM_TYPE_OMAP was originally used for boards like BeagleBones[1]
 until there was a refactoring to "FDTize" the support. (So,
 presumably on the netbsd-9 branch it should still "just work" as-is,
 not that I'm suggesting anyone go backwards.)

 As the serial console evidently works either way, perhaps this detail
 was just missed in the conversion.

 1. 
 https://github.com/NetBSD/src/blob/6d50112479385151f7eb67cc2e44588cd618a96e/sys/arch/arm/omap/obio_com.c#L154C30-L154C30

 Dave

From: "David H. Gutteridge" <gutteridge@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57598 CVS commit: src/sys/arch/arm/ti
Date: Tue, 5 Sep 2023 02:59:07 +0000

 Module Name:	src
 Committed By:	gutteridge
 Date:		Tue Sep  5 02:59:07 UTC 2023

 Modified Files:
 	src/sys/arch/arm/ti: ti_com.c

 Log Message:
 ti_com.c: set sc_type to COM_TYPE_OMAP

 Avoid a kernel hang reported by Brook Milligan in PR port-arm/57598.
 Patch suggested by RVP, seems correct to several of us. (If this
 introduces a regression with some board, sorry, mea culpa. But in
 that case we should still be carrying this, just conditionalized.)


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/sys/arch/arm/ti/ti_com.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: analyzed->needs-pullups
State-Changed-By: gutteridge@NetBSD.org
State-Changed-When: Tue, 05 Sep 2023 03:02:45 +0000
State-Changed-Why:
Going to leave in needs-pullups for a bit, just in case there's an issue.

Responsible-Changed-From-To: kern-bug-people->gutteridge
Responsible-Changed-By: gutteridge@NetBSD.org
Responsible-Changed-When: Fri, 08 Sep 2023 12:31:28 +0000
Responsible-Changed-Why:
Self-assign so this doesn't get lost.

State-Changed-From-To: needs-pullups->pending-pullups
State-Changed-By: gutteridge@NetBSD.org
State-Changed-When: Tue, 17 Oct 2023 16:01:17 +0000
State-Changed-Why:
netbsd-10 pullup #419 submitted.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57598 CVS commit: [netbsd-10] src/sys/arch/arm/ti
Date: Wed, 18 Oct 2023 11:49:09 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Oct 18 11:49:09 UTC 2023

 Modified Files:
 	src/sys/arch/arm/ti [netbsd-10]: ti_com.c

 Log Message:
 Pull up following revision(s) (requested by gutteridge in ticket #419):

 	sys/arch/arm/ti/ti_com.c: revision 1.12

 ti_com.c: set sc_type to COM_TYPE_OMAP

 Avoid a kernel hang reported by Brook Milligan in PR port-arm/57598.

 Patch suggested by RVP, seems correct to several of us. (If this
 introduces a regression with some board, sorry, mea culpa. But in
 that case we should still be carrying this, just conditionalized.)


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.11.18.1 src/sys/arch/arm/ti/ti_com.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: gutteridge@NetBSD.org
State-Changed-When: Wed, 18 Oct 2023 16:06:39 +0000
State-Changed-Why:
Pullup completed.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2023 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.